[gd_scene load_steps=19 format=3 uid="uid://cs4f2yg262hsj"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_1jvw5"]
[ext_resource type="PackedScene" uid="uid://dk526ftvinoh0" path="res://scenes/corpos/wall.tscn" id="1_32og2"]
[ext_resource type="PackedScene" uid="uid://dwm7ynj6bwk8i" path="res://scenes/corpos/paddle.tscn" id="2_05h22"]
[ext_resource type="Texture2D" uid="uid://bwxim6t3xmtqc" path="res://assests/pixil-frame-0 (33).png" id="4_65gyg"]
[ext_resource type="PackedScene" uid="uid://co4d25fceh4pm" path="res://scenes/corpos/ball.tscn" id="4_km2mj"]
[ext_resource type="Script" path="res://scenes/corpos/player2.gd" id="4_mscl5"]
[ext_resource type="PackedScene" uid="uid://c36mothpb12ks" path="res://scenes/corpos/guooooooooooooooooooooooooool.tscn" id="5_4aw8v"]
[ext_resource type="Texture2D" uid="uid://v7qf63vpeiye" path="res://assests/pixil-frame-0 (32).png" id="5_oko7b"]
[ext_resource type="PackedScene" uid="uid://drw4xakowj3ll" path="res://scenes/ui.tscn" id="7_so3on"]
[ext_resource type="FontFile" uid="uid://8obfx1q3bbl1" path="res://assests/fontes/PixelOperator.ttf" id="8_ek1a6"]
[ext_resource type="Script" path="res://scenes/menu.gd" id="8_iuxju"]
[ext_resource type="Texture2D" uid="uid://bqcwj34v1s1fe" path="res://assests/ui_buttons_arrow_right_NORMAL.png" id="10_cdtxk"]
[ext_resource type="Script" path="res://scenes/menu2.gd" id="10_ts2bp"]
[ext_resource type="Texture2D" uid="uid://c87wudg5m1jtu" path="res://assests/ui_buttons_arrow_right_PRESSED.png" id="11_8kwuy"]
[ext_resource type="Texture2D" uid="uid://c2jwo0ed714ck" path="res://assests/ui_buttons_arrow_up_PRESSED.png" id="14_08eb7"]
[ext_resource type="Texture2D" uid="uid://cjcwqkvbpfv6k" path="res://assests/ui_buttons_arrow_up_NORMAL.png" id="15_6uu6y"]
[ext_resource type="Texture2D" uid="uid://cbqbgo5ykkabe" path="res://assests/pixil-frame-0.png" id="15_63yxo"]
[ext_resource type="AudioStream" uid="uid://d44lxy6ao5fl" path="res://assests/773458__crashbulb__85-bpm-rock-soul-strut-8-bar-loop-guitar-bass-organ-piano-drums.wav" id="18_0s0rg"]

[node name="Main" type="Node2D"]
position = Vector2(0, -1)
script = ExtResource("1_1jvw5")

[node name="Walls" type="Node" parent="."]

[node name="TopWall" parent="Walls" instance=ExtResource("1_32og2")]
position = Vector2(10, -600)
rotation = 1.5708
scale = Vector2(1, 9)

[node name="BottomWall" parent="Walls" instance=ExtResource("1_32og2")]
position = Vector2(10, 600)
rotation = 1.5708
scale = Vector2(1, 9)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.4, 0.4)

[node name="Paddle" parent="." instance=ExtResource("2_05h22")]
modulate = Color(1, 0, 0, 1)
position = Vector2(-1000, 0)

[node name="enemypaddle" parent="." instance=ExtResource("2_05h22")]
modulate = Color(0.133333, 0.152941, 0.960784, 1)
position = Vector2(1000, 0)
script = ExtResource("4_mscl5")

[node name="Ball" parent="." instance=ExtResource("4_km2mj")]

[node name="Node" type="Node" parent="Ball"]

[node name="GUOOOOOOOOOOOOOOOOOOOOOOOOOOL" parent="." instance=ExtResource("5_4aw8v")]
position = Vector2(-1143, 0)

[node name="GUOOOOOOOOOOOOOOOOOOOOOOOOOOL2" parent="." instance=ExtResource("5_4aw8v")]
position = Vector2(1070, 0)

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(0, -600)
points = PackedVector2Array(0, 0, 0, 1200)
texture_mode = 1

[node name="CanvasLayer" parent="." instance=ExtResource("7_so3on")]

[node name="MarginContainer" parent="CanvasLayer" index="0"]
offset_right = 1116.0

[node name="playerpoints" parent="CanvasLayer/MarginContainer" index="0"]
theme_override_fonts/font = ExtResource("8_ek1a6")
autowrap_mode = 3

[node name="enemypoints" parent="CanvasLayer/MarginContainer" index="1"]
theme_override_fonts/font = ExtResource("8_ek1a6")
autowrap_mode = 3

[node name="CanvasLayer" parent="CanvasLayer" index="1"]
offset_left = 30.0
offset_top = 22.0
offset_right = 1112.0
offset_bottom = 65.0

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 99.0
offset_top = 83.0
offset_right = 1049.0
offset_bottom = 567.0

[node name="Label(player1)" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = -3.0
offset_right = 885.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_ek1a6")
theme_override_font_sizes/font_size = 38
text = "Quantos lados tem um retangulo?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Menu" type="VBoxContainer" parent="CanvasLayer/Panel" node_paths=PackedStringArray("pointer")]
visible = false
layout_mode = 0
offset_left = 71.0
offset_top = 195.0
offset_right = 884.0
offset_bottom = 723.0
script = ExtResource("8_iuxju")
pointer = NodePath("../Sprite2D")

[node name="Label" type="Label" parent="CanvasLayer/Panel/Menu"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_ek1a6")
theme_override_font_sizes/font_size = 45
text = "0,02; 0,07; 0,09; 0,125; 0,2; 0,375; 0,6; 0,75; 1; 1,125; 1,25; 1,3"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Label2" type="Label" parent="CanvasLayer/Panel/Menu"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_ek1a6")
theme_override_font_sizes/font_size = 45
text = "0,02; 0,07; 0,09; 0,125; 0,2; 0,375; 0,6; 0,75; 1; 1,125; 1,25; 1,3"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Label3" type="Label" parent="CanvasLayer/Panel/Menu"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_ek1a6")
theme_override_font_sizes/font_size = 45
text = "0,02; 0,07; 0,09; 0,125; 0,2; 0,375; 0,6; 0,75; 1; 1,125; 1,25; 1,3"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Label4" type="Label" parent="CanvasLayer/Panel/Menu"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_ek1a6")
theme_override_font_sizes/font_size = 45
text = "0,02; 0,07; 0,09; 0,125; 0,2; 0,375; 0,6; 0,75; 1; 1,125; 1,25; 1,3"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Panel"]
position = Vector2(281, 241)
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_cdtxk")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/Panel"]
position = Vector2(281, 241)
scale = Vector2(1.5, 1.5)
texture = ExtResource("11_8kwuy")

[node name="Menu2" type="VBoxContainer" parent="CanvasLayer/Panel" node_paths=PackedStringArray("pointer", "pointer_player2")]
visible = false
layout_mode = 0
offset_left = 71.0
offset_top = 195.0
offset_right = 884.0
offset_bottom = 723.0
script = ExtResource("10_ts2bp")
pointer = NodePath("../Sprite2D")
pointer_player2 = NodePath("../Sprite2D2")

[node name="Label" type="Label" parent="CanvasLayer/Panel/Menu2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_ek1a6")
theme_override_font_sizes/font_size = 45
text = "4"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Label2" type="Label" parent="CanvasLayer/Panel/Menu2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_ek1a6")
theme_override_font_sizes/font_size = 45
text = "3"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Label3" type="Label" parent="CanvasLayer/Panel/Menu2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_ek1a6")
theme_override_font_sizes/font_size = 45
text = "5"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Label4" type="Label" parent="CanvasLayer/Panel/Menu2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_ek1a6")
theme_override_font_sizes/font_size = 45
text = "2"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Timer" type="Timer" parent="CanvasLayer"]

[node name="enemyTimer" type="Timer" parent="CanvasLayer"]

[node name="pause timer" type="Timer" parent="."]
wait_time = 3.0

[node name="inputs" type="CanvasLayer" parent="."]

[node name="playerEsquerda" type="Node" parent="inputs"]

[node name="Baixo" type="TouchScreenButton" parent="inputs/playerEsquerda"]
texture_filter = 1
position = Vector2(1, 551)
scale = Vector2(3, 3)
texture_normal = ExtResource("4_65gyg")
texture_pressed = ExtResource("5_oko7b")
action = "TABAXOO"
visibility_mode = 1

[node name="selecionar" type="TouchScreenButton" parent="inputs/playerEsquerda"]
texture_filter = 1
position = Vector2(1, 300)
scale = Vector2(3, 3)
texture_normal = ExtResource("15_63yxo")
texture_pressed = ExtResource("15_63yxo")
action = "aceitar"
visibility_mode = 1

[node name="Cima" type="TouchScreenButton" parent="inputs/playerEsquerda"]
texture_filter = 1
position = Vector2(1, 96)
scale = Vector2(3, 3)
texture_normal = ExtResource("14_08eb7")
texture_pressed = ExtResource("15_6uu6y")
action = "RIBA"
visibility_mode = 1

[node name="playerDireita" type="Node" parent="inputs"]

[node name="Baixo" type="TouchScreenButton" parent="inputs/playerDireita"]
texture_filter = 1
position = Vector2(1049, 551)
scale = Vector2(3, 3)
texture_normal = ExtResource("4_65gyg")
texture_pressed = ExtResource("5_oko7b")
action = "baixo"
visibility_mode = 1

[node name="selecionar" type="TouchScreenButton" parent="inputs/playerDireita"]
texture_filter = 1
position = Vector2(1049, 300)
scale = Vector2(3, 3)
texture_normal = ExtResource("15_63yxo")
texture_pressed = ExtResource("15_63yxo")
action = "selecionar"
visibility_mode = 1

[node name="Cima" type="TouchScreenButton" parent="inputs/playerDireita"]
texture_filter = 1
position = Vector2(1049, 96)
scale = Vector2(3, 3)
texture_normal = ExtResource("14_08eb7")
texture_pressed = ExtResource("15_6uu6y")
action = "cima"
visibility_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_0s0rg")
volume_db = -15.874
autoplay = true
playback_type = 1

[connection signal="fezgol" from="GUOOOOOOOOOOOOOOOOOOOOOOOOOOL" to="." method="enemy_scored"]
[connection signal="fezgol" from="GUOOOOOOOOOOOOOOOOOOOOOOOOOOL2" to="." method="_gol_do_neymar"]
[connection signal="actioned" from="CanvasLayer/Panel/Menu" to="." method="_on_menu_actioned"]
[connection signal="actioned" from="CanvasLayer/Panel/Menu2" to="." method="_on_menu_2_actioned"]
[connection signal="timeout" from="CanvasLayer/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/enemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="pause timer" to="." method="_on_pause_timer_timeout"]

[editable path="CanvasLayer"]
